# tracer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: rust.yml
docs/superpowers/plans/: 2026-05-07-tracer-modular-refactor.md  2026-05-13-knowledge-graph-phase1.md  2026-05-13-knowledge-graph-phase2.md  2026-05-13-knowledge-graph-phase3.md  2026-05-14-knowledge-graph-phase4.md  2026-05-14-knowledge-graph-phase5.md
docs/superpowers/specs/: 2026-05-07-tracer-refactor-design.md  2026-05-13-knowledge-graph-design.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.ts  canvas.ts  events.js  events.ts  graph.ts  graphui.ts  icons.ts  main.js  main.ts  navigation.test.ts  navigation.ts  nodes.ts  search.ts  sidebar.ts  state.js  state.ts  transfer.js  transfer.ts  utils.test.ts
frontend/src/: main.ts
frontend/src/api/: api.ts  graph.ts
frontend/src/components/: canvas.ts  events.ts  graphui.ts  navigation.ts  nodes.ts  search.ts  sidebar.ts  transfer.ts
frontend/src/core/: store.ts  types.ts
frontend/tests/: navigation.test.ts  store.test.ts  utils.test.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/graph/: community.rs  content.rs  embedder.rs  indexer.rs  llm.rs  mod.rs  parser.rs  query.rs  store.rs
src-tauri/src/transfer/: commands.rs  discovery.rs  mod.rs  server.rs
static/: index.html
static/css/: style.css
static/js/: api.js  api.ts  canvas.js  canvas.ts  events.js  events.ts  main.ts  navigation.js  nodes.js  nodes.ts  search.js  sidebar.js  sidebar.ts  state.js  state.ts  store.js  store.test.ts  store.ts  types.ts  utils.js  utils.ts
(+2 files in other folders)
