[package]
name = "tracer"
version = "0.1.0"
edition = "2021"
description = "Tracer — 3D Filesystem Explorer for macOS"
license = "MIT"

[lib]
name = "tracer_lib"
crate-type = ["rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
dirs = "5.0"
chrono = "0.4.44"
rayon = "1.10"
urlencoding = "2"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
