[package]
name = "tracer"
version = "0.1.0"
edition = "2021"
description = "Tracer — 3D Filesystem Explorer for macOS"
license = "MIT"

[lib]
name = "tracer_lib"
crate-type = ["rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
dirs = "5.0"
chrono = "0.4.44"
rayon = "1.10"
urlencoding = "2"
axum = { version = "0.7", features = ["macros"] }
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled-full"] }
petgraph = "0.6"
notify-debouncer-mini = "0.4"
blake3 = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
